tests/slp3_bad_value_optional.stderr
tests/slp3_bad_value_optional.sl:52:55: error: expected type
