tests/slp3_bad_value_optional.sl
import "slang/feature/optional"

pub fn bad(x i32) ?i32 {
    return x
}
